added theme color

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <meta name="twitter:site" content="@spatiebar" />
   <meta name="twitter:creator" content="@spatiebar" />
 
+  <meta name="theme-color" content="#b0a330" />
   <meta property="og:title" content="">
   <meta property="og:type" content="website">
   <meta property="og:url" content="">
